# PARC2025-Engineers-League

./: README.md  docker-compose.yml
parc_robot_bringup/: CMakeLists.txt  package.xml
parc_robot_bringup/config/: controllers.yaml  ekf.yaml  gz_bridge.yaml  joystick.yaml  parc_robot_bridge.yaml  task1_route1_params.yaml  world1_params.yaml  world2_params.yaml  world3_params.yaml
parc_robot_bringup/launch/: task1_launch.py  task_launch.py  teleop_launch.py
parc_robot_bringup/parc_robot_bringup/: gps2cartesian.py
parc_robot_bringup/scripts/: get_robot_pose.py  load_task_params.py
parc_robot_bringup/worlds/: empty.world  gen2.sdf  gen3.sdf  generated.sdf  mini.sdf  parc_task1.world  world1.sdf  world2.sdf  world3.sdf
parc_robot_description/urdf/: gps.xacro  imu.xacro  parc_robot.xacro  parc_robot_gazebo.xacro  parc_robot_gz_control.xacro  rename_me_gz_control.xacro  side_cameras.xacro  ydlidar.xacro  zed2.xacro
parc_robot_interfaces/: package.xml
